# Exjobb-HOTPANTS

./: .gitignore  LICENSE  README.md
BACH/: CMakeLists.txt  Makefile  argsUtil.h  bachUtil.cpp  cdkscUtil.cpp  clUtil.h  cmvUtil.cpp  conv.cl  fitsUtil.h  fitsUtils.h  main.cpp  sssUtil.cpp  sub.cl
BACH/cl_kern/: conv.cl  sub.cl
BACH/utils/: .clang-format  argsUtil.h  bachUtil.h  clUtil.h  datatypeUtil.h  fitsUtil.h
blockPSFCenters/: Makefile  main.cpp  sssUtil.cpp
blockPSFCenters/utils/: datatypeUtil.h
cl-test/: CLUtils.h  CMakeLists.txt  Makefile  clUtil.h  code.cc  conv.cl  conv_old.cl  convolve.cc  convolve.cpp  main.cpp  ppmio.h  simple_add.cl  simple_conv.cl
fitstest/: Makefile  fitsUtils.h  main.cpp
hotpants/: Makefile  main.c
test/: Makefile  main.cpp
